<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">Guide for Fortnite</string>
    <string name="action_settings">Ajustes</string>
    <string name="mapa">Mapa</string>
    <string name="noticias">Noticias</string>
    <string name="trucos">Trucos y consejos</string>
    <string name="armas">Armas</string>
    <string name="chat">Chat</string>
    <string name="construcciones">Construcciones</string>
    <string name="armas_url">http://bit.ly/2Du3y9x</string>
    <string name="construcciones_url">http://bit.ly/2n7LLLe</string>
    <string name="noticias_url">http://bit.ly/2m6wiLz</string>
    <string name="skins_url">http://bit.ly/2rmsDym</string>
    <string name="trucos_url">http://bit.ly/2F5R0Co</string>
    <string name="trucos_desc">Los mejores consejos y trucos para poder mejorar tu técnica de juego.</string>
    <string name="skins_desc">Todas las skins de trajes, picos, paracaídas y bailes.</string>
    <string name="armas_desc">Todas las armas con sus tipos de rarezas y trucos para aprender a dominarlas.</string>
    <string name="news_desc">Informate de todas la novedades relacionadas con el juego.</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="str_cargada">Noticias cargadas correctamente</string>
    <string name="navigation_drawer_open">Hola</string>
    <string name="navigation_drawer_close">Adios</string>
    <string name="conexion_internet">No tienes conexión a internet</string>
</resources>