<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trucos"
            android:title="@string/trucos"
            android:textSize="5sp"/>
        <item
            android:id="@+id/nav_armas"
            android:title="@string/armas" />
        <item
            android:id="@+id/nav_mapa"
            android:title="@string/mapa" />
        <item
            android:id="@+id/nav_noticias"
            android:title="@string/noticias" />
        <item
            android:id="@+id/nav_skins"
            android:title="Skins" />
        <item
            android:id="@+id/nav_construcciones"
            android:title="@string/construcciones" />
        <item
            android:id="@+id/nav_twitter"
            android:title="Twitter" />
        <item
            android:id="@+id/nav_chat"
            android:title="Chat" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Feedback" />
        </menu>
    </item>

</menu>
