<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:weightSum="4"
    android:background="@drawable/fondo"
    android:padding="20dp">


    <android.support.v7.widget.CardView
        android:id="@+id/card_todos"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        card_view:cardCornerRadius="10dp"
        card_view:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#0e81d1">

            <ImageView
                android:id="@+id/img_todos"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_map_black_24dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/mapa"
                android:textColor="@color/blanco"
                android:textSize="24sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.602"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>



    <ScrollView
        android:id="@+id/scroll_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/card_todos"
        android:layout_marginTop="75dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/card_ocio"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="34dp"
                card_view:cardCornerRadius="5dp"
                card_view:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp">

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp">

                    <ImageView
                        android:id="@+id/img_ocio"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/noticias_icon" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_tech"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="52dp"
                card_view:cardCornerRadius="5dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp">
                0e81d1

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp">

                    <ImageView
                        android:id="@+id/img_tech"
                        android:layout_width="75dp"

                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/trucos_icon" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/card_tech"
                android:layout_marginTop="14dp"
                android:text="@string/trucos"
                android:textColor="@color/blanco"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignEnd="@+id/card_ocio"
                android:text="@string/noticias"
                android:textColor="@color/blanco"
                android:textSize="24sp"
                android:textStyle="bold" />


            <android.support.v7.widget.CardView
                android:id="@+id/card_juegos"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="34dp"
                android:layout_marginTop="175dp"
                card_view:cardCornerRadius="5dp"
                card_view:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp">

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp">

                    <ImageView
                        android:id="@+id/img_juegos"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/chat_icon" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_moda"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="52dp"
                android:layout_marginTop="175dp"
                card_view:cardCornerRadius="5dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp">
                0e81d1

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp">

                    <ImageView
                        android:id="@+id/img_moda"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/armas_icons" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/card_moda"
                android:layout_below="@+id/card_moda"
                android:layout_marginStart="14dp"
                android:text="@string/armas"
                android:textColor="@color/blanco"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView4"
                android:layout_below="@+id/card_juegos"
                android:layout_marginStart="20dp"
                android:text="@string/chat"
                android:textColor="@color/blanco"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_skin"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="52dp"
                android:layout_marginTop="350dp"
                card_view:cardCornerRadius="5dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp">
                0e81d1

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp">

                    <ImageView
                        android:id="@+id/img_skin"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/img_skin" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <TextView
                android:id="@+id/txt_skin"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/card_moda"
                android:layout_below="@+id/card_skin"
                android:layout_marginStart="14dp"
                android:text="Skins"
                android:textColor="@color/blanco"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_twitter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="34dp"
                android:layout_marginTop="350dp"
                card_view:cardCornerRadius="5dp"
                card_view:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp">

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp">

                    <ImageView
                        android:id="@+id/img_twitter"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/twitter_icon" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView4"
                android:text="Twitter"
                android:textColor="@color/blanco"
                android:textSize="24sp"
                android:textStyle="bold" />











</RelativeLayout>


    </ScrollView>



</RelativeLayout>